; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_classify_args.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_classify_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 }

@SAVE = common dso_local global i32 0, align 4
@KIND_STRUCT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*)* @classify_args to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @classify_args(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %15 = load i32, i32* @SAVE, align 4
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  store i32 6, i32* %11, align 4
  store i32 8, i32* %12, align 4
  store i32 0, i32* %13, align 4
  br label %16

16:                                               ; preds = %70, %4
  %17 = load i32, i32* %13, align 4
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @vec_len(i32* %18)
  %20 = icmp slt i32 %17, %19
  br i1 %20, label %21, label %73

21:                                               ; preds = %16
  %22 = load i32*, i32** %8, align 8
  %23 = load i32, i32* %13, align 4
  %24 = call %struct.TYPE_5__* @vec_get(i32* %22, i32 %23)
  store %struct.TYPE_5__* %24, %struct.TYPE_5__** %14, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @KIND_STRUCT, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %36

32:                                               ; preds = %21
  %33 = load i32*, i32** %7, align 8
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %35 = call i32 @vec_push(i32* %33, %struct.TYPE_5__* %34)
  br label %69

36:                                               ; preds = %21
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 0
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %38, align 8
  %40 = call i64 @is_flotype(%struct.TYPE_6__* %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %55

42:                                               ; preds = %36
  %43 = load i32, i32* %10, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %10, align 4
  %45 = load i32, i32* %12, align 4
  %46 = icmp slt i32 %43, %45
  br i1 %46, label %47, label %49

47:                                               ; preds = %42
  %48 = load i32*, i32** %6, align 8
  br label %51

49:                                               ; preds = %42
  %50 = load i32*, i32** %7, align 8
  br label %51

51:                                               ; preds = %49, %47
  %52 = phi i32* [ %48, %47 ], [ %50, %49 ]
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %54 = call i32 @vec_push(i32* %52, %struct.TYPE_5__* %53)
  br label %68

55:                                               ; preds = %36
  %56 = load i32, i32* %9, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %9, align 4
  %58 = load i32, i32* %11, align 4
  %59 = icmp slt i32 %56, %58
  br i1 %59, label %60, label %62

60:                                               ; preds = %55
  %61 = load i32*, i32** %5, align 8
  br label %64

62:                                               ; preds = %55
  %63 = load i32*, i32** %7, align 8
  br label %64

64:                                               ; preds = %62, %60
  %65 = phi i32* [ %61, %60 ], [ %63, %62 ]
  %66 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %67 = call i32 @vec_push(i32* %65, %struct.TYPE_5__* %66)
  br label %68

68:                                               ; preds = %64, %51
  br label %69

69:                                               ; preds = %68, %32
  br label %70

70:                                               ; preds = %69
  %71 = load i32, i32* %13, align 4
  %72 = add nsw i32 %71, 1
  store i32 %72, i32* %13, align 4
  br label %16

73:                                               ; preds = %16
  ret void
}

declare dso_local i32 @vec_len(i32*) #1

declare dso_local %struct.TYPE_5__* @vec_get(i32*, i32) #1

declare dso_local i32 @vec_push(i32*, %struct.TYPE_5__*) #1

declare dso_local i64 @is_flotype(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
